--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>jedis</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 
